Package name: geneweb -> geneweb-lib

--- a/lib/dune.in
+++ b/lib/dune.in
@@ -2,7 +2,7 @@
 
 (library
  (name geneweb)
- (public_name geneweb)
+ (public_name geneweb-lib)
  (synopsis "GeneWeb library")
  (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% -V OCAML:%{ocaml_version} %{input-file})))
  (libraries unix
@@ -11,11 +11,11 @@
             stdlib-shims
             camlp5
             camlp5.gramlib
-            geneweb.gwdb.mli
-            geneweb.def
-            geneweb.sosa.mli
-            geneweb.util
-            geneweb.wserver.mli
+            geneweb-lib.gwdb.mli
+            geneweb-lib.def
+            geneweb-lib.sosa.mli
+            geneweb-lib.util
+            geneweb-lib.wserver.mli
             markup)
  (modules_without_implementation config templAst)
 )
