--- a/lib/gwdb1/dune
+++ b/lib/gwdb1/dune
@@ -2,7 +2,7 @@
  (name gwdb1_internal)
  (public_name geneweb-gwdb-legacy.internal)
  (wrapped false)
- (libraries geneweb.def geneweb.wserver.mli geneweb.util geneweb.io)
+ (libraries geneweb-lib.def geneweb-lib.wserver.mli geneweb-lib.util geneweb-lib.io)
  (modules_without_implementation dbdisk)
  (modules
     database
@@ -19,6 +19,6 @@
  (name gwdb1)
  (public_name geneweb-gwdb-legacy)
  (libraries gwdb1_internal)
- (implements geneweb.gwdb.mli)
+ (implements geneweb-lib.gwdb.mli)
  (modules gwdb)
 )
