--- a/lib/sosa.zarith/dune
+++ b/lib/sosa.zarith/dune
@@ -2,5 +2,5 @@
  (name sosa_zarith)
  (public_name geneweb-sosa-zarith)
  (libraries zarith)
- (implements geneweb.sosa.mli)
+ (implements geneweb-lib.sosa.mli)
 )
