Added missing uucp dep in opam files

--- a/geneweb-bin.opam
+++ b/geneweb-bin.opam
@@ -27,6 +27,7 @@ depends: [
   "ounit" { with-test }
   "stdlib-shims"
   "unidecode" { = "0.2.0" }
+  "uucp"
 ]
 
 conflict-class: [ "geneweb-bin" ]
