Made everything really independant from gwdb_driver used. Removed some unused stuff (remaining code for gwc2 support). Removed gwtp binary (will be transfered to geneweb-contrib).

--- a/lib/dune.in
+++ b/lib/dune.in
@@ -11,7 +11,7 @@
             stdlib-shims
             camlp5
             camlp5.gramlib
-            geneweb-lib.gwdb.mli
+            geneweb-lib.gwdb_driver.mli
             geneweb-lib.def
             geneweb-lib.sosa.mli
             geneweb-lib.util
