--- a/lib/util/dune
+++ b/lib/util/dune
@@ -2,5 +2,5 @@
  (name util)
  (public_name geneweb-lib.util)
  (wrapped false)
- (libraries stdlib-shims unidecode geneweb-lib.def geneweb-lib.io geneweb-lib.gwdb.mli uucp uutf)
+ (libraries stdlib-shims unidecode geneweb-lib.def geneweb-lib.io geneweb-lib.gwdb_driver.mli uucp uutf)
 )
