--- a/bin/dune.in
+++ b/bin/dune.in
@@ -52,12 +52,21 @@
 
 (include_subdirs unqualified)
 
+(library
+  (name gwdlib)
+  (public_name geneweb-gwd-lib)
+  (wrapped true)
+  (libraries geneweb geneweb-jingoo jingoo unix str %%%GWDB_PKG%%% %%%SOSA_PKG%%% %%%WSERVER_PKG%%%)
+  (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% -V OCAML:%{ocaml_version} %{input-file})))
+  (modules gwDaemon jgInterp request requestHandler)
+)
+
 (executable
   (package geneweb-bin)
   (public_name gwd)
-  (libraries unix str %%%GWDB_PKG%%% %%%SOSA_PKG%%% %%%WSERVER_PKG%%% geneweb)
+  (libraries geneweb geneweb-jingoo geneweb-gwd-lib unix str %%%GWDB_PKG%%% %%%SOSA_PKG%%% %%%WSERVER_PKG%%%)
   (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% -V OCAML:%{ocaml_version} %{input-file})))
-  (modules gwd gwDaemon request requestHandler)
+  (modules gwd)
 )
 
 (executables
