--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ jobs:
     env: OCAML_VERSION=4.08
   - os: linux
     env: OCAML_VERSION=4.09
+  - os: linux
+    env: OCAML_VERSION=4.10
   - os: osx
     env: OCAML_VERSION=4.09
 
