--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ language: c
 jobs:
   fast_finish: true
   include:
+  - os: freebsd
+    env: OCAML_VERSION=4.05
   - os: linux
     env: OCAML_VERSION=4.05
   - os: linux
@@ -23,6 +25,7 @@ jobs:
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then command -v protoc >/dev/null 2>&1 || (brew update && brew install protobuf) ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then command -v protoc >/dev/null 2>&1 || sudo apt-get install -qq protobuf-compiler ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "freebsd" ]]; then command -v protoc >/dev/null 2>&1 || sudo pkg install -qy protobuf ; fi
 
 install:
   - wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-ocaml.sh ;
