ocaml travis script now compatible with freebsd

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,30 @@ jobs:
   include:
   - os: freebsd
     env: OCAML_VERSION=4.05
+  - os: freebsd
+    env: OCAML_VERSION=4.06
+  - os: freebsd
+    env: OCAML_VERSION=4.07
+  - os: freebsd
+    env: OCAML_VERSION=4.08
+  - os: freebsd
+    env: OCAML_VERSION=4.09
+  - os: freebsd
+    env: OCAML_VERSION=4.10
+  - os: linux
+    env: OCAML_VERSION=4.05
+  - os: linux
+    env: OCAML_VERSION=4.06
+  - os: linux
+    env: OCAML_VERSION=4.07
+  - os: linux
+    env: OCAML_VERSION=4.08
+  - os: linux
+    env: OCAML_VERSION=4.09
+  - os: linux
+    env: OCAML_VERSION=4.10
+  - os: osx
+    env: OCAML_VERSION=4.09
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then command -v protoc >/dev/null 2>&1 || (brew update && brew install protobuf) ; fi
@@ -14,7 +38,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "freebsd" ]]; then command -v protoc >/dev/null 2>&1 || sudo pkg install -qy protobuf ; fi
 
 install:
-  - wget https://raw.githubusercontent.com/cyrilst/ocaml-ci-scripts/master/.travis-ocaml.sh ;
+  - wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-ocaml.sh ;
     bash -ex .travis-ocaml.sh ;
 
 script:
