--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,7 +37,7 @@
 
   build_script:
     - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && BENCH_FILE=geneweb-bench.tmp.bin make ci"'
-    - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ocaml ./configure.ml && make clean distrib"'
+    - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ocaml ./configure.ml --sosa-legacy && make clean distrib"'
     - 7z a geneweb.zip %APPVEYOR_BUILD_FOLDER%\distribution
     - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ocaml ./configure.ml --sosa-zarith && make clean distrib"'
     - 7z a geneweb-zarith.zip %APPVEYOR_BUILD_FOLDER%\distribution
@@ -87,5 +87,5 @@
 
   build_script:
     - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && BENCH_FILE=geneweb-bench.tmp.bin make ci"'
-    - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ocaml ./configure.ml && make clean distrib"'
+    - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ocaml ./configure.ml --sosa-legacy && make clean distrib"'
     - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ocaml ./configure.ml --sosa-zarith && make clean distrib"'
