Config: added an empty (uninitialized) config value.

--- a/lib/dune.in
+++ b/lib/dune.in
@@ -16,7 +16,6 @@
             geneweb-lib.sosa.mli
             geneweb-lib.util
             geneweb-lib.wserver.mli
-            markup
- )
- (modules_without_implementation config templAst)
+            markup)
+ (modules_without_implementation templAst)
 )
