Fixbase: added a function to correct invalid utf8 sequences.

--- a/lib/dune.in
+++ b/lib/dune.in
@@ -16,6 +16,8 @@
             geneweb-lib.sosa.mli
             geneweb-lib.util
             geneweb-lib.wserver.mli
-            markup)
+            markup
+            uunf
+ )
  (modules_without_implementation config templAst)
 )
