--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,7 @@
   environment:
     CYG_ROOT: C:/cygwin64
     CYG_BASH: '%CYG_ROOT%/bin/bash -lc'
-    OPAM_PACKAGES: 'benchmark camlp5 cppo dune.1.11.4 jingoo markup num ocaml ounit stdlib-shims unidecode.0.2.0 uucp uutf zarith'
+    OPAM_PACKAGES: 'benchmark camlp5 cppo dune.1.11.4 jingoo markup num ocaml ounit stdlib-shims unidecode.0.2.0 uucp uunf uutf zarith'
 
   install:
     - 'set OPAMYES=1'
