--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@
     - x64
 
   init:
-    - ps: $env:PKG_VERSION = $env:appveyor_repo_tag_name ?? $env:appveyor_repo_commit.SubString(0,8)
+    - ps: $env:PKG_VERSION = ($env:appveyor_repo_tag_name ?? $env:appveyor_repo_commit.SubString(0,8))
     - ps: $env:IS_PRERELEASE = !$env:appveyor_repo_tag
 
   environment:
