--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,10 +7,10 @@
     - x64
 
   init:
-    - ps: if ($env:appveyor_repo_tag_name) { \
-            $env:PKG_VERSION = $env:appveyor_repo_tag_name ; \
-          else { \
-            $env:PKG_VERSION = $env:appveyor_repo_commit.SubString(0,8) ; \
+    - ps: if ($env:appveyor_repo_tag_name) {
+            $env:PKG_VERSION = $env:appveyor_repo_tag_name ;
+          } else {
+            $env:PKG_VERSION = $env:appveyor_repo_commit.SubString(0,8) ;
           }
     - ps: $env:IS_PRERELEASE = !$env:appveyor_repo_tag
 
