--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,9 +68,14 @@
       name: GeneWeb with default options
     - path: geneweb-%PKG_VERSION%-install.exe
       name: Win64 installer for GeneWeb
-
+  
+  before_deploy:
+    - cmd: '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && export DESCRIPTION=$(git log --format=%s v6.08..HEAD | | awk {print} ORS=\\\\n)"'
+    - sh: export DESCRIPTION=$(git log --format=%s v6.08..HEAD | | awk {print} ORS=\\\\n)
+ 
   deploy:
     release: 'Geneweb %PKG_VERSION%'
+    description: '%DESCRIPTION%'
     provider: GitHub
     auth_token:
       secure: fMXpYzNO3X61MnpDkjGw8NiI53HYiaSTgzpvYo5qj8TIBBy7O2+lqVVSCxxqqu3h
