--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,14 +69,10 @@
     - path: geneweb-%PKG_VERSION%-install.exe
       name: Win64 installer for GeneWeb
   
-  before_deploy:
-    - cmd: '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && git diff --stat v6.08..HEAD > changelog.txt"'
-    - sh: git diff --stat v6.08..HEAD > changelog.txt
-    - ps: ${env:RELEASE_DESCRIPTION} = ( Get-Content -LiteralPath changelog.txt -Encoding UTF8 ) -join "`n";
- 
+
   deploy:
     release: 'Geneweb %PKG_VERSION%'
-    description: '%RELEASE_DESCRIPTION%'
+    description: 'Geneweb %PKG_VERSION% built by appveyor'
     provider: GitHub
     auth_token:
       secure: fMXpYzNO3X61MnpDkjGw8NiI53HYiaSTgzpvYo5qj8TIBBy7O2+lqVVSCxxqqu3h
