--- a/appveyor.yml
+++ b/appveyor.yml
@@ -75,6 +75,6 @@
     provider: GitHub
     auth_token:
       secure: fMXpYzNO3X61MnpDkjGw8NiI53HYiaSTgzpvYo5qj8TIBBy7O2+lqVVSCxxqqu3h
-    artifact: /geneweb-%PKG_OS%-%PKG_VERSION%.zip|geneweb-%PKG_VERSION%-install.exe/
+    artifact: /geneweb-%PKG_OS%-%PKG_VERSION%.zip|geneweb-win64-%PKG_VERSION%-installer.exe/
     draft: false
     prerelease: false
